--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
+    "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "swiper": "^11.1.0"
   },
