--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,17 @@
     "@headlessui/react": "^1.7.18",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.59.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "primereact": "^10.6.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "swiper": "^11.1.0"
   },
