--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.1.10",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
