--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
+    "firebase": "^10.14.1",
     "primereact": "^10.6.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
