--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.59.0",
+    "antd": "^5.21.5",
+    "antd-img-crop": "^4.23.0",
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "firebase": "^10.14.1",
