--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "firebase": "^10.14.1",
+    "html-react-parser": "^5.1.18",
     "primereact": "^10.6.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-super-responsive-table": "^6.0.0",
     "react-tabs": "^6.0.2",
